test_programs/compile_failure/overlapping_dep_and_mod/foo/src/lib.nr
pub fn baz() -> Field {
    2
}
